change link for banner dropbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,7 +51,7 @@ body {
 }
 
 .jumbotron{
-	background-image: url('jumbotron.jpg');
+	background-image: url('https://dl.dropboxusercontent.com/s/erxuiwaib44c2r9/jumbotron.jpg');
 	h1,h2 {
 		font-family: guardian-egyptt, georgia, serif;
 	}
