--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -21,6 +21,11 @@
     </div>
   <% end %>
 
+  <div id="stripe_error" class="alert alert-danger" style="display:none">
+    <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.
+    </noscript>
+  </div>
+
   <div class="form-group">
     <%= f.label :address %>
     <%= f.text_field :address, class: "form-control" %>
@@ -58,7 +63,7 @@
     </div> 
   </div>
   <div class="form-group">
-    <%= f.submit "Complete Order", class: "btn btn-success" %>
+    <%= f.submit "Complete Order", class: "btn btn-success", data: {no_turbolink: true} %>
   </div>
 <% end %>
 
